# monad-val-manager

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  config.toml.example
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
docs/: cli-reference.md  command-reference.md  validator-onboarding.md
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: env.rs  mod.rs  settings.rs
src/doctor/: checks.rs  mod.rs
src/handlers/: balance.rs  config_cmd.rs  doctor.rs  dry_run.rs  init.rs  mod.rs  staking.rs  staking_query.rs  status.rs  transfer.rs  tui.rs  utils.rs
src/perf/: benchmark.rs  mod.rs  monitor.rs  optimizer.rs
src/rpc/: client.rs  methods.rs  mod.rs
src/staking/: constants.rs  getters.rs  ledger_signer.rs  mod.rs  operations.rs  receipt.rs  signer.rs  signer_factory.rs  transaction.rs  transaction_alloy.rs  types.rs
src/staking/calldata/: decode.rs  encode.rs  mod.rs
src/staking/events/: helpers.rs  mod.rs  parsing.rs  signatures.rs  types.rs
src/tui/: action_executor.rs  big_text.rs  cli_bridge.rs  clipboard.rs  doctor_state.rs  effects.rs  handler.rs  mod.rs  perf_state.rs  pie_chart.rs  query_state.rs  spinner.rs  state.rs  theme.rs  toast.rs  transfer_state.rs
src/tui/app/: core.rs  doctor.rs  handlers.rs  handlers_tests.rs  mod.rs  refresh.rs  render.rs
src/tui/screens/: dashboard.rs  doctor.rs  help.rs  mod.rs  staking.rs  transfer.rs
src/tui/staking/: add_validator_state.rs  change_commission_state.rs  delegate_state.rs  helpers.rs  mod.rs  query_delegator_state.rs  query_validator_state.rs  state.rs  types.rs  undelegate_state.rs  withdraw_state.rs
src/tui/widgets/: confirm_popup.rs  consensus.rs  delegation_list.rs  doctor_results.rs  header.rs  mod.rs  nav_menu.rs  network.rs  peer_health.rs  system.rs  transfer_dialog.rs  validator.rs
src/tui/widgets/add_validator_dialog/: mod.rs  widget.rs
src/tui/widgets/change_commission_dialog/: mod.rs  widget.rs
src/tui/widgets/delegate_dialog/: mod.rs  widget.rs
src/tui/widgets/input_dialog/: dialog_type.rs  mod.rs  state.rs  tests.rs  validation.rs  widget.rs
src/tui/widgets/key_input_dialog/: mod.rs  validation.rs
src/tui/widgets/query_delegator_dialog/: mod.rs  widget.rs
src/tui/widgets/query_validator_dialog/: mod.rs  widget.rs
src/tui/widgets/undelegate_dialog/: mod.rs  widget.rs
src/tui/widgets/withdraw_dialog/: mod.rs  widget.rs
src/utils/: error.rs  formatting.rs  mod.rs  system.rs
tests/: integration_test.rs  test_prometheus_metrics.rs  testnet_integration_test.rs
tests/common/: helpers.rs  mod.rs
tests/integration/: bug_007_broadcast_test.rs  bug_007_debug_test.rs  config_tests.rs  doctor_tests.rs  mod.rs  query_tx_tests.rs  staking_tests.rs  transfer_tests.rs  tui_tests.rs
tests/mocks/: fixtures.rs  mod.rs  rpc_mock.rs
tests/unit/: test_bug_007_broadcast.rs
